# QtXQueryTester

./: CMakeLists.txt  LICENSE  README.md  main.cpp  qtquerytesterwindow.cpp  qtquerytesterwindow.h  qtquerytesterwindow.ui
